# netdrift

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements_worker.txt
dockerfiles/: Dockerfile.worker
netdrift/: config.py  dependencies.py  diff.py  enums.py  exceptions.py  logic.py  main.py  webhook.py
netdrift/api/: __init__.py  intent.py  jobs.py
netdrift/api/intent/: full.py  group.py  partial.py
netdrift/auth_providers/: base.py  ssh.py
netdrift/crud/: __init__.py  base.py  full_intent.py  intent.py  intent_diff.py  intent_group.py  partial_intent.py
netdrift/models/: common.py  enums.py  intent.py  intent_diff.py  intent_group.py  mongo.py  webhook.py
netdrift/worker/: config.py
