[tool.poetry]
name = "netdrift"
version = "0.1.0"
description = "Network drift management tool for NETCONF based devices."
authors = ["Brandon Spendlove <brandon.spendlove@veesix-networks.co.uk>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
structlog = "^24.1.0"
motor = "^3.4.0"
xmldiff = "^2.6.3"
ncdiff = "^24.3"
aiohttp = "^3.9.3"


[tool.poetry.group.worker.dependencies]
arq = "^0.25.0"
ncclient = "^0.6.15"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox", ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    "tests/*.py"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "D"]
ignore = ["D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore Exceptions docstrings because they should be self-documenting
"app/exceptions.py" = ["D101"]
"app/models/*.py" = ["D100", "D101", "D102"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
